package ar.edu.uba.fi;

public interface Servicio {
    void verificarUsosMaximos(int maximoDeUsos, String idSocio, AgendaGimnasio agenda);
}
